built_project/mephmicroapi/build_pipeline/stack_definitions/k8s_templates/restapi_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mephmicroapi-restapi-deployment
  namespace: <k8s_namespace>
spec:
  selector:
    matchLabels:
      k8s-app: mephmicroapi-restapi
  template:
    metadata:
      labels:
        k8s-app: mephmicroapi-restapi
        deploymentVersionTag: "<deploymentVersionTag>"
    spec:
      containers:
        - name: app
          image: <k8s_registry_prefix>/mephmicroapi-restapi:<version>
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 120
            httpGet:
              path: /health
              port: http
          livenessProbe:
            initialDelaySeconds: 120
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 0.2
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
