built_project/mephmicroapi/build_pipeline/stack_definitions/k8s_templates/restapi_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mephmicroapi-restapi
  namespace: <k8s_namespace>
  labels:
    k8s-app: mephmicroapi-restapi
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8080
      port: 80
  selector:
    k8s-app: mephmicroapi-restapi
